force-app/main/default/objects/Lead/fields/ActivitySectorTxt__c.field-meta.xml
<CustomField>
    <fullName>ActivitySectorTxt__c</fullName>
    <label>Setor de Atividade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ActivitySector</valueSetName>
    </valueSet>
</CustomField>