force-app/main/default/objects/Lead/fields/ApprovalStatusTxt__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatusTxt__c</fullName>
    <description>Campo utilizado para impedir um usuário de pular etapas no Sales Path de Lead. Existe uma regra de validação que verifica se o valor desse campo é igual ao do campo &quot;Aprovação&quot; e, caso não seja, não permite que o Sales Path seja alterado.</description>
    <label>Status da aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando envio para aprovação</fullName>
                <default>true</default>
                <label>Vendedor</label>
            </value>
            <value>
                <fullName>Enviado para aprovação</fullName>
                <label>Cadastro</label>
            </value>
            <value>
                <fullName>Aprovado na etapa 1</fullName>
                <label>Fiscal</label>
            </value>
            <value>
                <fullName>Aprovado na etapa 2</fullName>
                <label>Enviado ao SAP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>