force-app/main/default/objects/Lead/fields/ApprovalTxt__c.field-meta.xml
<CustomField>
    <fullName>ApprovalTxt__c</fullName>
    <label>Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando envio para aprovação</fullName>
                <default>true</default>
                <label>Aguardando envio para aprovação</label>
            </value>
            <value>
                <fullName>Enviado para aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado na etapa 1</fullName>
                <label>Aprovado pela área de cadastro</label>
            </value>
            <value>
                <fullName>Aprovado na etapa 2</fullName>
                <label>Aprovado pela área fiscal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>