force-app/main/default/objects/Lead/fields/BirthdayPartner1Dte__c.field-meta.xml
<CustomField>
    <fullName>BirthdayPartner1Dte__c</fullName>
    <label>Data de Nascimento Sócio 1</label>
    <type>Date</type>
</CustomField>