force-app/main/default/objects/Lead/fields/BirthdayPartner2Dte__c.field-meta.xml
<CustomField>
    <fullName>BirthdayPartner2Dte__c</fullName>
    <label>Data de Nascimento Sócio 2</label>
    <type>Date</type>
</CustomField>