force-app/main/default/objects/Lead/fields/BirthdayPartner3Dte__c.field-meta.xml
<CustomField>
    <fullName>BirthdayPartner3Dte__c</fullName>
    <label>Data de Nascimento Sócio 3</label>
    <type>Date</type>
</CustomField>