force-app/main/default/objects/Lead/fields/BrandTxt__c.field-meta.xml
<CustomField>
    <fullName>BrandTxt__c</fullName>
    <label>Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>