force-app/main/default/objects/Lead/fields/ChannelLkp__c.field-meta.xml
<CustomField>
    <fullName>ChannelLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Canal</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>