force-app/main/default/objects/Lead/fields/ClientChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>ClientChannelTxt__c</fullName>
    <label>Canal Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC1 - PR - Atacados Construtoras 1</fullName>
            </value>
            <value>
                <fullName>AC2 - PR - Atacados Construtoras 2</fullName>
            </value>
            <value>
                <fullName>AV1 - PR - Atacado Varejos 1</fullName>
            </value>
            <value>
                <fullName>AV2 - PR - Atacado Varejos 2</fullName>
            </value>
            <value>
                <fullName>CAP - IE - CIA Saneamento Privatizada</fullName>
            </value>
            <value>
                <fullName>CAS - IE - Companhias de Saneamento</fullName>
            </value>
            <value>
                <fullName>CTD - PR - Construtora Direta</fullName>
            </value>
            <value>
                <fullName>DTR - PR - Distribuidor Varejo</fullName>
            </value>
            <value>
                <fullName>EMP - IE - Empreiteiras</fullName>
            </value>
            <value>
                <fullName>FAB - IR - Fabricantes</fullName>
            </value>
            <value>
                <fullName>IND - IR - Indústrias (Usinas)</fullName>
            </value>
            <value>
                <fullName>OTR - IR - Outros</fullName>
            </value>
            <value>
                <fullName>PRT - IR - Produto Rural</fullName>
            </value>
            <value>
                <fullName>REV - IE - Revenda Infra-Estrutura</fullName>
            </value>
            <value>
                <fullName>VCO - PR - Varejos Construtora</fullName>
            </value>
            <value>
                <fullName>VHC - PR - Varejos Home Center</fullName>
            </value>
            <value>
                <fullName>VI1 - IR - Revendas de Irrigação 1</fullName>
            </value>
            <value>
                <fullName>VI2 - IR - Revendas de Irrigação 2</fullName>
            </value>
            <value>
                <fullName>VJ1 - PR - Varejos 1</fullName>
            </value>
            <value>
                <fullName>VJ2 - PR - Varejos 2</fullName>
            </value>
            <value>
                <fullName>VJ3 - PR - Varejos 3</fullName>
            </value>
            <value>
                <fullName>VJ4 - PR - Varejos 4</fullName>
            </value>
            <value>
                <fullName>VJ5 - PR - Varejos 5</fullName>
            </value>
            <value>
                <fullName>VRD - PR - Redes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>