force-app/main/default/objects/Lead/fields/CNPJPartner1Txt__c.field-meta.xml
<CustomField>
    <fullName>CNPJPartner1Txt__c</fullName>
    <label>CNPJ Sócio 1</label>
    <length>14</length>
    <type>Text</type>
</CustomField>