force-app/main/default/objects/Lead/fields/CNPJPartner2Txt__c.field-meta.xml
<CustomField>
    <fullName>CNPJPartner2Txt__c</fullName>
    <label>CNPJ Sócio 2</label>
    <length>14</length>
    <type>Text</type>
</CustomField>