force-app/main/default/objects/Lead/fields/CNPJPartner3Txt__c.field-meta.xml
<CustomField>
    <fullName>CNPJPartner3Txt__c</fullName>
    <label>CNPJ Sócio 3</label>
    <length>14</length>
    <type>Text</type>
</CustomField>