force-app/main/default/objects/Lead/fields/CNPJTxt__c.field-meta.xml
<CustomField>
    <fullName>CNPJTxt__c</fullName>
    <inlineHelpText>Escreva apenas números sem separações entre eles. 
Exemplo: 66753556000167.
*Campo obrigatório para aprovação.</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>