force-app/main/default/objects/Lead/fields/ConvertLeadBln__c.field-meta.xml
<CustomField>
    <fullName>ConvertLeadBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converter Lead</label>
    <type>Checkbox</type>
</CustomField>