force-app/main/default/objects/Lead/fields/CPFPartner1Txt__c.field-meta.xml
<CustomField>
    <fullName>CPFPartner1Txt__c</fullName>
    <label>CPF Sócio 1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>