force-app/main/default/objects/Lead/fields/CPFPartner3Txt__c.field-meta.xml
<CustomField>
    <fullName>CPFPartner3Txt__c</fullName>
    <label>CPF Sócio 3</label>
    <length>11</length>
    <type>Text</type>
</CustomField>