force-app/main/default/objects/Lead/fields/CustomNameFml__c.field-meta.xml
<CustomField>
    <fullName>CustomNameFml__c</fullName>
    <description>Recebe o nome do lead. Criado para passar o nome do lead para a conta que será criada no processo de conversão do lead.</description>
    <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome customizado</label>
    <type>Text</type>
</CustomField>