force-app/main/default/objects/Lead/fields/DistributionChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannelTxt__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Canal de Distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DistributionChannel</valueSetName>
    </valueSet>
</CustomField>