force-app/main/default/objects/Lead/fields/EmailNFTxt__c.field-meta.xml
<CustomField>
    <fullName>EmailNFTxt__c</fullName>
    <label>Email NF</label>
    <type>Email</type>
</CustomField>