force-app/main/default/objects/Lead/fields/EmailTxt__c.field-meta.xml
<CustomField>
    <fullName>EmailTxt__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Email Comercial</label>
    <type>Email</type>
</CustomField>