force-app/main/default/objects/Lead/fields/IndustryTxt__c.field-meta.xml
<CustomField>
    <fullName>IndustryTxt__c</fullName>
    <label>Setor Industrial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>0001 - Contribuinte</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>0002 - Não Contribuinte</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>0003 - Contribuinte SC</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>0004 - Pró Emprego</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>0005 - Contribuinte 12%</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>0006 - Contribuinte c/ ates</label>
            </value>
            <value>
                <fullName>0007</fullName>
                <label>0007 - Fornecedor Simples</label>
            </value>
            <value>
                <fullName>0008</fullName>
                <label>0008 - Transf.entre filiais</label>
            </value>
            <value>
                <fullName>0009</fullName>
                <label>0009 - Transp. isento MG</label>
            </value>
            <value>
                <fullName>0010</fullName>
                <label>0010 - Transp.SC/SP-red.ICM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>