force-app/main/default/objects/Lead/fields/LeadAddressTxt__c.field-meta.xml
<CustomField>
    <fullName>LeadAddressTxt__c</fullName>
    <description>Campo criado para apresentar o endereço do lead nos layouts de pesquisa.</description>
    <formula>Street  &amp; &quot; &quot;  &amp;   State &amp; &quot; &quot; &amp;  Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>