force-app/main/default/objects/Lead/fields/LeadURLFml__c.field-meta.xml
<CustomField>
    <fullName>LeadURLFml__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id ,FirstName&amp;&quot; &quot;&amp;LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Lead</label>
    <type>Text</type>
</CustomField>