force-app/main/default/objects/Lead/fields/MarketedMaterialsTxt__c.field-meta.xml
<CustomField>
    <fullName>MarketedMaterialsTxt__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Materiais Comercializados</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MarketedMaterials</valueSetName>
    </valueSet>
</CustomField>