force-app/main/default/objects/Lead/fields/MunicipalRegistrationNmb__c.field-meta.xml
<CustomField>
    <fullName>MunicipalRegistrationNmb__c</fullName>
    <label>Inscrição Municipal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>