force-app/main/default/objects/Lead/fields/NielsenZoneTxt__c.field-meta.xml
<CustomField>
    <fullName>NielsenZoneTxt__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Zona Nielsen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NielsenZone</valueSetName>
    </valueSet>
</CustomField>