force-app/main/default/objects/Lead/fields/PotentialPurchaseNmb__c.field-meta.xml
<CustomField>
    <fullName>PotentialPurchaseNmb__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Potencial Compra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>