force-app/main/default/objects/Lead/fields/PVCChannelTxt__c.field-meta.xml
<CustomField>
    <fullName>PVCChannelTxt__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Canal PVC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PVCChannel</valueSetName>
    </valueSet>
</CustomField>