force-app/main/default/objects/Lead/fields/ReasonToDisqualificationTxt__c.field-meta.xml
<CustomField>
    <fullName>ReasonToDisqualificationTxt__c</fullName>
    <label>Motivo da Desqualificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não foi desqualificado</fullName>
                <default>true</default>
                <label>Não foi desqualificado</label>
            </value>
            <value>
                <fullName>Compra do concorrente</fullName>
            </value>
            <value>
                <fullName>Preço não atendido</fullName>
            </value>
            <value>
                <fullName>Prazo não atendido</fullName>
            </value>
            <value>
                <fullName>Sem interesse cliente</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>