force-app/main/default/objects/Lead/fields/RegisteredInDatabaseBln__c.field-meta.xml
<CustomField>
    <fullName>RegisteredInDatabaseBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadastrado na Base</label>
    <type>Checkbox</type>
</CustomField>