force-app/main/default/objects/Lead/fields/RemarkTxt__c.field-meta.xml
<CustomField>
    <fullName>RemarkTxt__c</fullName>
    <label>Observações</label>
    <length>50</length>
    <type>Text</type>
</CustomField>