force-app/main/default/objects/Lead/fields/RG_StateInscriptionTxt__c.field-meta.xml
<CustomField>
    <fullName>RG_StateInscriptionTxt__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>RG/Inscrição Estadual</label>
    <length>18</length>
    <type>Text</type>
</CustomField>