force-app/main/default/objects/Lead/fields/SalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationTxt__c</fullName>
    <inlineHelpText>Esse campo é preenchido automaticamente se o campo Vendedor for preenchido.
*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Organização de Vendas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrganization</valueSetName>
    </valueSet>
</CustomField>