force-app/main/default/objects/Lead/fields/SellerLkp__c.field-meta.xml
<CustomField>
    <fullName>SellerLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Vendedor</label>
    <referenceTo>Seller__c</referenceTo>
    <relationshipLabel>Novos Clientes</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>