force-app/main/default/objects/Lead/fields/ShipmentConditionTxt__c.field-meta.xml
<CustomField>
    <fullName>ShipmentConditionTxt__c</fullName>
    <label>Condição de Expedição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Sul</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>São Paulo</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Rio de Janeiro</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Minas Gerais</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>CO/NO /0700 Jlle</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Nordeste/0700 Jlle</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Clientes Insp. Sumaré</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Clientes Insp. Suape</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Sul do Pará</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Alagoas</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Mato Grosso</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Plastubos PA Maceió</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>CO/NO Especial</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Amanco Anápolis</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Nordeste/Norte 0900</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Amanco I Anápolis</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Plastubos Suape</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Plastubos MG Sumaré</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Mato Grosso do Sul</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Bahia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>