force-app/main/default/objects/Lead/fields/ShortNameTxt__c.field-meta.xml
<CustomField>
    <fullName>ShortNameTxt__c</fullName>
    <inlineHelpText>*Campo obrigatório para aprovação.</inlineHelpText>
    <label>Nome Reduzido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>