force-app/main/default/objects/Lead/fields/SubfiscalGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>SubfiscalGroupTxt__c</fullName>
    <label>Grupo subfiscal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Isento de sub.fiscal</fullName>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Sujeito ST - Consumo DIFA</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Cliente c/Liminar não sujeito a Subst. T</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Sujeito a Subst.Tributaria Parceiros</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Sujeito redução ICMS ST</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Simples nacional</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Sujeito a sub.fiscal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>