force-app/main/default/objects/Lead/fields/TaxObligatoryTxt__c.field-meta.xml
<CustomField>
    <fullName>TaxObligatoryTxt__c</fullName>
    <label>Obrigatoriedade fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Não sujeito a impst.</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Imposto normal</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Área Livre Com IPI</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ZFM - ICMS e IPI</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Clientes exportação</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Área Livre Comer. ST</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Imposto Futuro</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Desc. REIDI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>