force-app/main/default/objects/Lead/fields/TypeOfPersonTxt__c.field-meta.xml
<CustomField>
    <fullName>TypeOfPersonTxt__c</fullName>
    <label>Tipo de Pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <fullName>Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>