force-app/main/default/objects/Lead/validationRules/CNPJOnlyNumberValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJOnlyNumberValidation</fullName>
    <active>true</active>
    <description>Valida os dígitos de verificação do CNPJ que foi digitado sem pontuação.</description>
    <errorConditionFormula>AND( ISNUMBER(CNPJTxt__c), 
OR( 
OR(AND(MOD(( 
(VALUE(MID(CNPJTxt__c,1,1))*6)+ 
(VALUE(MID(CNPJTxt__c,2,1))*5)+ 
(VALUE(MID(CNPJTxt__c,3,1))*4)+ 
(VALUE(MID(CNPJTxt__c,4,1))*3)+ 
(VALUE(MID(CNPJTxt__c,5,1))*2)+ 
(VALUE(MID(CNPJTxt__c,6,1))*9)+ 
(VALUE(MID(CNPJTxt__c,7,1))*8)+ 
(VALUE(MID(CNPJTxt__c,8,1))*7)+ 
(VALUE(MID(CNPJTxt__c,9,1))*6)+ 
(VALUE(MID(CNPJTxt__c,10,1))*5)+ 
(VALUE(MID(CNPJTxt__c,11,1))*4)+ 
(VALUE(MID(CNPJTxt__c,12,1))*3)+ 
(VALUE(MID(CNPJTxt__c,13,1))*2) 
),11 
)&lt;=1 
,VALUE(MID(CNPJTxt__c,14,1))!=0 
) 
,AND(MOD(( 
(VALUE(MID(CNPJTxt__c,1,1))*6)+ 
(VALUE(MID(CNPJTxt__c,2,1))*5)+ 
(VALUE(MID(CNPJTxt__c,3,1))*4)+ 
(VALUE(MID(CNPJTxt__c,4,1))*3)+ 
(VALUE(MID(CNPJTxt__c,5,1))*2)+ 
(VALUE(MID(CNPJTxt__c,6,1))*9)+ 
(VALUE(MID(CNPJTxt__c,7,1))*8)+ 
(VALUE(MID(CNPJTxt__c,8,1))*7)+ 
(VALUE(MID(CNPJTxt__c,9,1))*6)+ 
(VALUE(MID(CNPJTxt__c,10,1))*5)+ 
(VALUE(MID(CNPJTxt__c,11,1))*4)+ 
(VALUE(MID(CNPJTxt__c,12,1))*3)+ 
(VALUE(MID(CNPJTxt__c,13,1))*2)) 
,11)&gt;1 
,(11-MOD(( 
(VALUE(MID(CNPJTxt__c,1,1))*6)+ 
(VALUE(MID(CNPJTxt__c,2,1))*5)+ 
(VALUE(MID(CNPJTxt__c,3,1))*4)+ 
(VALUE(MID(CNPJTxt__c,4,1))*3)+ 
(VALUE(MID(CNPJTxt__c,5,1))*2)+ 
(VALUE(MID(CNPJTxt__c,6,1))*9)+ 
(VALUE(MID(CNPJTxt__c,7,1))*8)+ 
(VALUE(MID(CNPJTxt__c,8,1))*7)+ 
(VALUE(MID(CNPJTxt__c,9,1))*6)+ 
(VALUE(MID(CNPJTxt__c,10,1))*5)+ 
(VALUE(MID(CNPJTxt__c,11,1))*4)+ 
(VALUE(MID(CNPJTxt__c,12,1))*3)+ 
(VALUE(MID(CNPJTxt__c,13,1))*2) 
) 
,11 
))!=VALUE(MID(CNPJTxt__c,14,1)) 
)), 
OR(AND(MOD(( 
(VALUE(MID(CNPJTxt__c,1,1))*6)+ 
(VALUE(MID(CNPJTxt__c,2,1))*5)+ 
(VALUE(MID(CNPJTxt__c,3,1))*4)+ 
(VALUE(MID(CNPJTxt__c,4,1))*3)+ 
(VALUE(MID(CNPJTxt__c,5,1))*2)+ 
(VALUE(MID(CNPJTxt__c,6,1))*9)+ 
(VALUE(MID(CNPJTxt__c,7,1))*8)+ 
(VALUE(MID(CNPJTxt__c,8,1))*7)+ 
(VALUE(MID(CNPJTxt__c,9,1))*6)+ 
(VALUE(MID(CNPJTxt__c,10,1))*5)+ 
(VALUE(MID(CNPJTxt__c,11,1))*4)+ 
(VALUE(MID(CNPJTxt__c,12,1))*3)+ 
(VALUE(MID(CNPJTxt__c,13,1))*2)) 
,11)&lt;=1 
,VALUE(MID(CNPJTxt__c,14,1))!=0) 
,AND(MOD(( 
(VALUE(MID(CNPJTxt__c,1,1))*6)+ 
(VALUE(MID(CNPJTxt__c,2,1))*5)+ 
(VALUE(MID(CNPJTxt__c,3,1))*4)+ 
(VALUE(MID(CNPJTxt__c,4,1))*3)+ 
(VALUE(MID(CNPJTxt__c,5,1))*2)+ 
(VALUE(MID(CNPJTxt__c,6,1))*9)+ 
(VALUE(MID(CNPJTxt__c,7,1))*8)+ 
(VALUE(MID(CNPJTxt__c,8,1))*7)+ 
(VALUE(MID(CNPJTxt__c,9,1))*6)+ 
(VALUE(MID(CNPJTxt__c,10,1))*5)+ 
(VALUE(MID(CNPJTxt__c,11,1))*4)+ 
(VALUE(MID(CNPJTxt__c,12,1))*3)+ 
(VALUE(MID(CNPJTxt__c,13,1))*2)) 
,11)&gt;1 
,(11-MOD(( 
(VALUE(MID(CNPJTxt__c,1,1))*6)+ 
(VALUE(MID(CNPJTxt__c,2,1))*5)+ 
(VALUE(MID(CNPJTxt__c,3,1))*4)+ 
(VALUE(MID(CNPJTxt__c,4,1))*3)+ 
(VALUE(MID(CNPJTxt__c,5,1))*2)+ 
(VALUE(MID(CNPJTxt__c,6,1))*9)+ 
(VALUE(MID(CNPJTxt__c,7,1))*8)+ 
(VALUE(MID(CNPJTxt__c,8,1))*7)+ 
(VALUE(MID(CNPJTxt__c,9,1))*6)+ 
(VALUE(MID(CNPJTxt__c,10,1))*5)+ 
(VALUE(MID(CNPJTxt__c,11,1))*4)+ 
(VALUE(MID(CNPJTxt__c,12,1))*3)+ 
(VALUE(MID(CNPJTxt__c,13,1))*2) 
),11 
))!=VALUE(MID(CNPJTxt__c,14,1)))) 
), 
NOT(ISBLANK(CNPJTxt__c)) 
)</errorConditionFormula>
    <errorDisplayField>CNPJTxt__c</errorDisplayField>
    <errorMessage>O CNPJ digitado não é válido.</errorMessage>
</ValidationRule>