force-app/main/default/objects/Lead/validationRules/ConvertThroughApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>ConvertThroughApproval</fullName>
    <active>true</active>
    <errorConditionFormula>!ConvertLeadBln__c &amp;&amp; ISPICKVAL(Status, &apos;Qualified&apos;)</errorConditionFormula>
    <errorMessage>Para converter um Lead, é necessário passar por todas as etapas do processo de aprovação</errorMessage>
</ValidationRule>