force-app/main/default/objects/Lead/validationRules/ReasonToDisqualification.validationRule-meta.xml
<ValidationRule>
    <fullName>ReasonToDisqualification</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Unqualified&quot;), ISPICKVAL( ReasonToDisqualificationTxt__c ,&quot;Não foi desqualificado&quot;) )</errorConditionFormula>
    <errorMessage>Antes de desqualificar um lead é necessário escolher um motivo no campo &quot;Motivo da desqualificação&quot;.</errorMessage>
</ValidationRule>